# QR_scanner_Raspberry_Pi

./: README.md
Bullseye_32/: CMakeLists.txt  QR.cbp  main.cpp
Bullseye_64/: CMakeLists.txt  QR.cbp
Bullseye_64_LCCV/: CMakeLists.txt  QR.cbp  QR.layout
Bullseye_64_LCCV/src/: main.cpp
Buster_32/: CMakeLists.txt  QRpi.cbp
Buster_64/: CMakeLists.txt  QRpi.cbp  main.cpp
QR_Bullseye_Gstreamer/: QR.cbp
